force-app/main/default/objects/Mexico_Seminars__c/Mexico_Seminars__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>OMI-MEX or AMSA Application</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Mexico Seminars (OMI-MEX, AMSA)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mexico Seminars/Activities Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>