force-app/main/default/objects/Mexico_Seminars__c/fields/Actual_Cost_MXP__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_MXP__c</fullName>
    <label>Actual Cost MXP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>