force-app/main/default/objects/Mexico_Seminars__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <inlineHelpText>1) Stage 1
2) Stage 2</inlineHelpText>
    <label>Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered in APP</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Incomplete participation</fullName>
            </value>
            <value>
                <fullName>Seminar Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>