force-app/main/default/objects/Mexico_Seminars__c/fields/EI__c.field-meta.xml
<CustomField>
    <fullName>EI__c</fullName>
    <description>English Interview Date</description>
    <label>EI</label>
    <type>Date</type>
</CustomField>