force-app/main/default/objects/Mexico_Seminars__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <label>Flight #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>