force-app/main/default/objects/Mexico_Seminars__c/fields/OMI_App_Date_I__c.field-meta.xml
<CustomField>
    <fullName>OMI_App_Date_I__c</fullName>
    <label>OMI App. Date I</label>
    <type>Date</type>
</CustomField>