force-app/main/default/objects/Mexico_Seminars__c/fields/SI__c.field-meta.xml
<CustomField>
    <fullName>SI__c</fullName>
    <description>Mexico Interview Date</description>
    <label>SI</label>
    <type>Date</type>
</CustomField>