force-app/main/default/objects/Mexico_Seminars__c/fields/Symposium__c.field-meta.xml
<CustomField>
    <fullName>Symposium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Symposium</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Symposium_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>